--- a/css/faq.css
+++ b/css/faq.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap');
 
 :root {
 	--textBlue: hsl(238, 29%, 16%);
@@ -14,18 +13,24 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: space-around;
-	margin-top: 4rem;
+	padding-top: 5rem;
 }
 .heading--faq {
 	margin: 0;
 	padding-bottom: 1.5rem;
-	font-size: 2.2rem;
+	/* font-size: 2.2rem; */
 	/* font-weight: 700; */
 	text-align: center;
 	/* color: var(--textBlue);
 	 */
 	z-index: 3;
 	color: #fca311;
+}
+
+.heading--faq h1{
+	font-size: 3.5rem;
+	font-weight: 600;
+	letter-spacing: 9px;
 }
 
 .accordion__title {
@@ -40,25 +45,6 @@
 	flex-direction: column;
 	margin-right: -6rem;
 }
-/* html {
-	box-sizing: border-box;
-	font-size: 62.5%;
-} */
-
-/* *,
-*::after,
-*::before {
-	box-sizing: border-box;
-} */
-
-/* body {
-	margin: 0;
-	padding: 0;
-	font-family: 'Kumbh Sans', sans-serif;
-	font-size: 1.2rem;
-	font-weight: 400;
-	background: linear-gradient(var(--gradientViolet), var(--gradientBlue));
-} */
 .block {
 	display: none;
 }
@@ -154,7 +140,6 @@
 	border: none;
 
 	background: none;
-	font-family: 'Kumbh Sans', sans-serif;
 	/* font-size: 1.4rem;
 	 */
 	/* font-size: 1.3rem; */
@@ -166,13 +151,7 @@
 	transition: all 300ms ease-in-out;
 }
 
-.accordion__title:focus,
-.accordion__title:focus-visible {
-	/* z-index: 3; */
-	/* outline: solid rgba(255, 146, 113, 0.5); */
-	/* box-shadow: 0 0 0.4rem 0.4rem rgba(161, 72, 45, 0.25); */
-	/* border-radius: 0.3rem; */
-}
+
 
 .accordion__title:hover {
 	cursor: pointer;
@@ -194,7 +173,7 @@
 }
 
 .accordion__text {
-	text-align: left;
+	text-align: justify;
 	padding: 0.5rem 3rem 2.2rem 0.5rem;
 	line-height: 1.2;
 	font-size: 16px;
@@ -297,13 +276,16 @@
 		left: 0;
 	}
 
-	.accordion__title {
+	/* .accordion__title {
 		/* font-size: 13px; */
-	}
+	/* } */
 }
 @media (max-width: 501px) {
 	.accordion__title {
 		font-size: 16px;
+	}
+	.heading--faq h1{
+		font-size: 2.5rem;
 	}
 	.accordion__text {
 		font-size: 15px;
