--- a/css/s.css
+++ b/css/s.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Barlow+Condensed:300,400,500,600,700,800,900|Barlow:300,400,500,600,700,800,900&display=swap');
+
 
 h1,
 h2,
@@ -110,7 +110,7 @@ nav .menu .website_name:hover {
 }
 nav .menu .menu_links {
 	transition: all 0.4s ease;
-	opacity: 0.8;
+	/* opacity: 0.8; */
 }
 nav .menu .menu_links:hover {
 	opacity: 1;
@@ -127,7 +127,7 @@ nav .menu .menu_links:hover {
 		transform: translateX(100%);
 		position: fixed;
 		top: 80px;
-		background: rgb(13, 3, 23);
+		background: rgb(9, 15, 46);
 		opacity: 1;
 	}
 
@@ -147,6 +147,7 @@ nav .menu .menu_links .link {
 	color: white;
 	text-transform: uppercase;
 	font-weight: 500;
+	overflow: hidden;
 	letter-spacing: 2px;
 	margin: 1.5rem;
 	position: relative;
@@ -171,7 +172,7 @@ nav .menu .menu_links .link:hover {
 	color: #fb8a8a;
 }
 nav .menu .menu_links .link:hover:before {
-	width: 40px;
+	width: 80%;
 	left: 0;
 }
 nav .menu .menu_icon {
@@ -517,7 +518,7 @@ canvas {
 	flex-direction: column;
 	position: relative;
 	min-height: 90vh;
-	padding-top: 2rem;
+	padding-top: 5rem;
 	color: white;
 	align-items: center;
 	background-color: #fefefe00;
@@ -526,6 +527,7 @@ canvas {
 .about-heading {
 	height: 10%;
 	font-size: 3.5rem;
+	font-weight: 600;
 	margin-bottom: 3rem;
 	letter-spacing: 9px;
 	color: #fca311;
@@ -661,7 +663,7 @@ canvas {
 }
 @media screen and (max-width: 500px) {
 	.about-container {
-		padding-top: 50px;
+		padding-top: 80px;
 	}
 	.about-left {
 		width: 90%;
