--- a/css/schedule.css
+++ b/css/schedule.css
@@ -7,18 +7,22 @@
 	/* background-color: #14213d00; */
 	width: auto;
 	/* min-height: 100%; */
-	margin-top: 5rem;
-	height: 100vh;
+	/* margin-top: 5rem; */
+	/* height: 100vh; */
 	display: flex;
 	flex-direction: column;
 	position: relative;
-	padding: 5rem 10%;
+	padding: 0 10%;
+	padding-top: 5rem;
 	margin: auto;
 }
 
 .schedule-heading {
-	font-size: 3em;
-	font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+	font-size: 3.5rem;
+	font-weight: 600;
+	letter-spacing: 9px;
+	
+	/* font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; */
 	color: #fca311;
 	margin-bottom: 2rem;
 }
@@ -92,9 +96,15 @@ li {
 	font-size: 1.4em;
 	
 }
-
-.content p,h4{
+.content h4{
 	opacity: 0.8;
+}
+.content p{
+	opacity: 0.8;
+	text-align: justify;
+	font-size: 1.2rem;
+	line-height: 2rem;
+
 }
 
 .appear-anim {
@@ -174,6 +184,7 @@ h4 {
 .swiper-wrapper .swiper-slide h3{
 	text-align: center;
 	margin: 0;
+	margin-bottom: 1rem;
 	padding: 0;
 }
 @media (min-width:822px){
@@ -223,13 +234,14 @@ h4 {
 	.container-schedule {
 		width: 100%;
 		margin: 0.1rem;
-		margin-top: 3rem;
-		margin-bottom: 2rem;
+		/* margin-bottom: 2rem; */
 		padding: 1rem;
+		padding-bottom: 0;
+		padding-top: 5rem;
 		height: max-content;
 	}
 
-	h3 {
+	.swiper-slide h3 {
 		font-size: 1.8rem;
 		margin: 1rem;
 	}
@@ -240,7 +252,8 @@ h4 {
 
 	.schedule-heading {
 		margin-bottom: 1rem;
-		letter-spacing: 2px;
+		font-size: 2.5rem;
+		letter-spacing: 9px;
 	}
 	.link-border{
 		font-size: 1.5em;
