--- a/css/timer.css
+++ b/css/timer.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Barlow+Condensed:100,200,300,400,500,600,700,800,900|Barlow+Semi+Condensed:100,200,300,400,500,600,700,800,900|Barlow:100,200,300,400,500,600,700,800,900&display=swap');
+/* @import url('https://fonts.googleapis.com/css?family=Barlow+Condensed:100,200,300,400,500,600,700,800,900|Barlow+Semi+Condensed:100,200,300,400,500,600,700,800,900|Barlow:100,200,300,400,500,600,700,800,900&display=swap'); */
+
 @media screen and (max-width: 512px) {
 	.wrapper {
 		min-height: 500px;
@@ -124,7 +125,7 @@
 	line-height: 22px;
 	text-align: center;
 	letter-spacing: 0.1em;
-	font-family: 'Barlow Semi Condensed', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 }
 @media screen and (max-width: 799px) {
 	.timer__name {
